# tval

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: Background.md  CLAUDE.md  DESIGN.md  slides.md
scripts/: pre-commit.sh
src/tval/: __init__.py  builder.py  checker.py  cli.py  exporter.py  init.py  loader.py  logger.py  main.py  parser.py  profiler.py  relation.py  reporter.py  status.py
src/tval/templates/: report.html.j2
tests/: test_builder.py  test_checker.py  test_exporter.py  test_integration.py  test_loader.py  test_parser.py  test_profiler.py  test_relation.py  test_reporter.py
tests/fixtures/: config.yaml  relations.yaml
tests/fixtures/data/orders/: orders.csv
tests/fixtures/schema/: orders.yaml  users.yaml
