[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tval"
dynamic = ["version"]
description = "Table data validator for pre-analysis data validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "b-trout" }]
keywords = ["validation", "csv", "excel", "parquet", "duckdb", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "duckdb",
    "pydantic",
    "pyyaml",
    "jinja2",
    "chardet",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "types-pyyaml",
    "types-chardet",
]

[project.urls]
Homepage = "https://github.com/b-trout/tval"
Repository = "https://github.com/b-trout/tval"
Issues = "https://github.com/b-trout/tval/issues"

[project.scripts]
tval = "tval.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tval/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tval"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["src/tval/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle, pyflakes, isort

[tool.mypy]
python_version = "3.10"
strict = true
