[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tval-cli"
dynamic = ["version"]
description = "Table data validator for pre-analysis data validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "b-trout" }]
keywords = ["validation", "csv", "excel", "parquet", "duckdb", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.4.4,<2",
    "pydantic>=2.12.5,<3",
    "pyyaml>=6.0.3,<7",
    "jinja2>=3.1.6,<4",
    "chardet>=6.0.0.post1,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2,<10",
    "ruff>=0.15.4,<1",
    "mypy>=1.19.1,<2",
    "pre-commit>=4.5.1,<5",
    "types-pyyaml>=6.0.12.20250915,<7",
    "types-chardet>=5.0.4.6,<6",
]

[project.urls]
Homepage = "https://github.com/b-trout/tval"
Repository = "https://github.com/b-trout/tval"
Issues = "https://github.com/b-trout/tval/issues"

[project.scripts]
tval = "tval.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tval/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tval"]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = ["src/tval/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90"]   # pycodestyle, pyflakes, isort, bugbear, mccabe

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.mypy]
python_version = "3.10"
strict = true
